--- a/index.html
+++ b/index.html
@@ -137,9 +137,7 @@
         <p id="description">
             Vedran Dodik, rođen je 15. 02.1978 godine, od oca Jasmina i majke Aiše Mehičević, u Sarajevu, Općina Stari Grad Sarajevo.<br><br>
             Završio je Osnovnu školu "Edhem Mulabdić" (ranije "Moric Moco Salom") na Bistriku.<br><br>
-            Nakon završene Srednje medicinske škole na Bjelavama, sa ocem Jasminom pokreće privatnu firmu za promet i distribuciju filmova i tv prava, koja nakon agresije, obnavlja preko 80 % devastiranih kina u cijeloj Bosni i Hercegovini.<br><br>
-            Paralelno uz rad, studira i završava Pravni fakultet, a prve sporove na sudu dobiva još kao student, zastupajući obespravljene stanare iz svog komšiluka, radnike Sarajevske pivare, kojima je privatizacijska mafija pokušala oteti stanove, te zahvaljujući tome postaje poznat široj javnosti kao borac za prava običnog čovjeka.<br><br>
-            Politiku prati još od rane mladosti, u doba raspada bivše Jugoslavije i uvođenja višestranačkog sistema.<br><br>
+            Pohađao je Srednju medicinsku školu na Bjelavama nakon koje studira i završava Pravni fakultet.<br><br>
             Trenutno je direktor agencije za nekretnine <a href="https://domus-nekretnine.ba" target="_blank" id="agency-link">DOMUS-NEKRETNINE</a> O.D.
         </p>
         <div class="contact" id="contact">
