--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
             Vedran Dodik, rođen je 15. 02.1978 godine, od oca Jasmina i majke Aiše Mehičević, u Sarajevu, Općina Stari Grad Sarajevo.<br><br>
             Završio je Osnovnu školu "Edhem Mulabdić" (ranije "Moric Moco Salom") na Bistriku.<br><br>
             Pohađao je Srednju medicinsku školu na Bjelavama nakon koje studira i završava Pravni fakultet.<br><br>
-            Trenutno je direktor agencije za nekretnine <a href="https://domus-nekretnine.ba" target="_blank" id="agency-link">DOMUS-NEKRETNINE</a> O.D.
+            Trenutno je direktor agencije za nekretnine <a href="https://domus-nekretnine.ba" target="_blank" id="agency-link">DOMUS</a>.
         </p>
         <div class="contact" id="contact">
-            <p id="contact-message" class="contact-text">Ako želite da me kontaktirate, slobodno <a href="mailto:dinarijan@dodik.eu">napišite mail</a>!</p>
+            <p id="contact-message" class="contact-text">Ako želite da me kontaktirate, slobodno <a href="mailto:vedran@dodik.eu">napišite mail</a>!</p>
             <p><a href="https://www.example.com/cv" target="_blank">Pogledajte moj CV</a></p>
         </div>
     </div>
